
Build 4

- [FIX] Only Sync a player to itself when logging in
- [FIX] Portable Furnace using clientside code on server
- Adjusted stun effects
- [FIX] Adrenaline Rush wasn't triggered by players
- [FIX] A near-death experience dropped all of the extra inventory, even if the player survived
- Code should be really better now. no more client/server entity mix for singleplayer
- [FIX] Jumping is not an excruciating experience anymore when well trained. Hopefully
- Synced Player when using a creative command to avoid relogging every damn time

Build 5

- Added Config
- Added Decanter
- Decanter stops on redstone signal
- Shadow form and Expert Traveller are nerfed. They now require experience

Build 6

- Implemented Golden Bow
- Implemented Experience Tome
- Implemented Tome of Return
- Implemented Scaffolds and Scaffold Builder
- Added config to prevent JVM Stack Overflow - This has its limitations on how many blocks a recursive function can do in a single call. this sucks, i should rewrite it
- Implemented Evocation Tome
- Added a command to reload configs. DEV only, will be removed on final version

Build 7

- Updated some textures
- Added decanter recipe
- Added base for enchanter
- Fancy enchanter Particles 
- Now loot finder gives loot from dungeon corridor chests instead of a custom list
- Implemented Enchanter

Build 8

- Fixed Stuff
- Code Cleanup
- Implemented hook, still kinda buggy

Build 9

- Implemented Disenchanter
- Added Update Checker
- First Alpha! yay

Build 10

- Added Thaumcraft and TConstruct Pickaxe compatibility
- Fixed weird issue with brewing stands and cauldrons showing as fire in recipes. Minecraft code is weird, I swear, blocks and items are different for these 2
- Registered Locked Recipes in Recipe Sorter. Derp

Build 11

- Fixed(tm) tinkers construct pickaxe recognition
- Rewrote command to autocomplete. Split into multiple commands. Allow forcetoggling abilities by creative players 