@@ -5,6 +5,7 @@ import net.minecraft.entity.player.InventoryPlayer;
 import net.minecraft.inventory.Container;
 import net.minecraft.inventory.Slot;
 import net.minecraft.item.ItemStack;
+import zabi.minecraft.perkmastery.misc.Log;
 
 
 public class ContainerBase extends Container {
@@ -43,6 +44,55 @@ public class ContainerBase extends Container {
 	@Override
 	public boolean canInteractWith(EntityPlayer player) {
 		return true;
+	}
+
+	@Override
+	protected boolean mergeItemStack(ItemStack givenStack, int slotFirst, int slotLast, boolean startFromLast) {
+
+		boolean successful = false;
+		Log.i("Merging");
+		int startSlot, endSlot;
+		if (startFromLast) {
+			startSlot = Math.max(slotLast, slotFirst);
+			endSlot = Math.min(slotLast, slotFirst);
+		} else {
+			startSlot = Math.min(slotLast, slotFirst);
+			endSlot = Math.max(slotLast, slotFirst);
+		}
+
+		Log.i(startSlot + " to " + endSlot);
+		for (int currentDestinationSlotNumber = startSlot; (!startFromLast && currentDestinationSlotNumber <= endSlot) || (startFromLast && currentDestinationSlotNumber >= endSlot); currentDestinationSlotNumber += startFromLast ? -1 : 1) {
+			Slot currentDestinationSlot = (Slot) this.inventorySlots.get(currentDestinationSlotNumber);
+			ItemStack stackAlreadyThere = currentDestinationSlot.getStack();
+			if (stackAlreadyThere != null && stackAlreadyThere.getItem() == givenStack.getItem() && (!givenStack.getHasSubtypes() || givenStack.getItemDamage() == stackAlreadyThere.getItemDamage()) && ItemStack.areItemStackTagsEqual(givenStack, stackAlreadyThere)) {
+				int maxFinalStackSize = Math.min(stackAlreadyThere.getMaxStackSize(), currentDestinationSlot.getSlotStackLimit());
+				if (stackAlreadyThere.stackSize < maxFinalStackSize) {
+					Log.i("Joining to existent stack in slot " + currentDestinationSlotNumber);
+					int transferrable = maxFinalStackSize - stackAlreadyThere.stackSize - 1;
+					Log.i("I can transfer at most" + transferrable + " items in this slot");
+					int transfering = Math.min(transferrable, givenStack.stackSize);
+					stackAlreadyThere.stackSize += transfering;
+					givenStack.stackSize -= transfering;
+					currentDestinationSlot.onSlotChanged();
+					successful = true;
+				}
+			} else if (stackAlreadyThere == null) {
+				Log.i("Transfering to free slot " + currentDestinationSlotNumber);
+				int transferrable = currentDestinationSlot.getSlotStackLimit();
+				ItemStack taken = null;
+				if (givenStack.stackSize > transferrable) taken = givenStack.splitStack(transferrable);
+				else {
+					taken = givenStack.copy();
+					givenStack.stackSize = 0;
+				}
+				currentDestinationSlot.putStack(taken);
+				currentDestinationSlot.onSlotChanged();
+				successful = true;
+			}
+			if (givenStack.stackSize == 0) return successful;
+		}
+
+		return successful;
 	}
 
 }
