@@ -25,6 +25,32 @@ public class ContainerBoneAmulet extends ContainerBase {
 	}
 
 	@Override
+	public ItemStack transferStackInSlot(EntityPlayer player, int _slot) {
+		ItemStack itemstack = null;
+		Slot slot = (Slot) this.inventorySlots.get(_slot);
+
+		if (slot != null && slot.getHasStack()) {
+			ItemStack itemstack1 = slot.getStack();
+			itemstack = itemstack1.copy();
+			if (_slot == 0) {
+				if (!this.mergeItemStack(itemstack1, 1, 36, true)) return null;
+				slot.onSlotChange(itemstack1, itemstack);
+			} else if (itemstack.getItem().equals(ItemList.boneAmulet)) {
+				if (!this.mergeItemStack(itemstack1, 0, 0, true)) return null;
+				slot.onSlotChange(itemstack1, itemstack);
+			}
+			if (itemstack1.stackSize == 0) {
+				slot.putStack((ItemStack) null);
+			} else {
+				slot.onSlotChanged();
+			}
+			if (itemstack1.stackSize == itemstack.stackSize) { return null; }
+			slot.onPickupFromSlot(player, itemstack1);
+		}
+		return itemstack;
+	}
+
+	@Override
 	public boolean canInteractWith(EntityPlayer player) {
 		return true;
 	}
