@@ -13,13 +13,17 @@ public class ContainerDisenchanter extends ContainerBase {
 
 	public ContainerDisenchanter(EntityPlayer player, TileEntityDisenchanter inv) {
 		this.player = player;
-		addPlayerSlots(this.player.inventory);
 		int x = 16, y = 35;
 		this.addSlotToContainer(new Slot(inv, 0, x, y) {
 
 			@Override
 			public boolean isItemValid(ItemStack is) {
 				return is.isItemEnchanted() && !is.getItem().equals(Items.enchanted_book);
+			}
+
+			@Override
+			public int getSlotStackLimit() {
+				return 1;
 			}
 		});
 
@@ -29,6 +33,11 @@ public class ContainerDisenchanter extends ContainerBase {
 			public boolean isItemValid(ItemStack is) {
 				return is.getItem().equals(Items.book);
 			}
+
+			@Override
+			public int getSlotStackLimit() {
+				return 1;
+			}
 		});
 
 		this.addSlotToContainer(new Slot(inv, 2, x + 135, y) {
@@ -37,8 +46,44 @@ public class ContainerDisenchanter extends ContainerBase {
 			public boolean isItemValid(ItemStack is) {
 				return false;
 			}
-		});
 
+			@Override
+			public int getSlotStackLimit() {
+				return 1;
+			}
+		});
+		addPlayerSlots(this.player.inventory);
+	}
+
+	@Override
+	public ItemStack transferStackInSlot(EntityPlayer player, int _slot) {
+		ItemStack itemstack = null;
+		Slot slot = (Slot) this.inventorySlots.get(_slot);
+
+		if (slot != null && slot.getHasStack()) {
+			ItemStack itemstack1 = slot.getStack();
+			itemstack = itemstack1.copy();
+			if (_slot < 3) {
+				if (!this.mergeItemStack(itemstack1, 3, 38, false)) return null;
+				slot.onSlotChange(itemstack1, itemstack);
+			} else {
+				if (itemstack.getItem().equals(Items.book)) {
+					if (!this.mergeItemStack(itemstack1, 1, 1, true)) return null;
+					slot.onSlotChange(itemstack1, itemstack);
+				} else if (itemstack.isItemEnchanted() && !itemstack.getItem().equals(Items.enchanted_book)) {
+					if (!this.mergeItemStack(itemstack1, 0, 0, true)) return null;
+					slot.onSlotChange(itemstack1, itemstack);
+				}
+			}
+			if (itemstack1.stackSize == 0) {
+				slot.putStack((ItemStack) null);
+			} else {
+				slot.onSlotChanged();
+			}
+			if (itemstack1.stackSize == itemstack.stackSize) { return null; }
+			slot.onPickupFromSlot(player, itemstack1);
+		}
+		return itemstack;
 	}
 
 }
